--- a/html/test/teto/teto.html
+++ b/html/test/teto/teto.html
@@ -14,7 +14,7 @@
           <!-- <iframe id="" class="test " src="test.html" frameborder="0"></iframe> -->
     </div>
 
-    <script src="sketch.js"></script>
+    <script src="./sketch.js"></script>
   </body>
 </html>
 
